chore: remove unused WebKit styles

--- a/src/css/tailwind_merged.css
+++ b/src/css/tailwind_merged.css
@@ -125,9 +125,7 @@
         -webkit-text-size-adjust: 100%;
         tab-size: 4;
         line-height: 1.5;
-        font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
-        font-feature-settings: var(--default-font-feature-settings, normal);
-        font-variation-settings: var(--default-font-variation-settings, normal);
+        font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"), ui-sans-serif;
         -webkit-tap-highlight-color: transparent;
     }
 
@@ -160,9 +158,7 @@
     }
 
     code, kbd, samp, pre {
-        font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
-        font-feature-settings: var(--default-mono-font-feature-settings, normal);
-        font-variation-settings: var(--default-mono-font-variation-settings, normal);
+        font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace), ui-monospace;
         font-size: 1em;
     }
 
@@ -271,55 +267,6 @@
         resize: vertical;
     }
 
-    ::-webkit-search-decoration {
-        -webkit-appearance: none;
-    }
-
-    ::-webkit-date-and-time-value {
-        min-height: 1lh;
-        text-align: inherit;
-    }
-
-    ::-webkit-datetime-edit {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-year-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-month-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-day-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-hour-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-minute-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-second-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-millisecond-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-datetime-edit-meridiem-field {
-        padding-block: 0;
-    }
-
-    ::-webkit-calendar-picker-indicator {
-        line-height: 1;
-    }
-
     :-moz-ui-invalid {
         box-shadow: none;
     }
@@ -358,7 +305,6 @@
 
     :is([type="text"], input:where(:not([type])), [type="email"], [type="url"], [type="password"], [type="number"], [type="date"], [type="datetime-local"], [type="month"], [type="search"], [type="tel"], [type="time"], [type="week"], [multiple], textarea, select):focus {
         outline-offset: 2px;
-        --tw-ring-inset: var(--tw-empty,);
         --tw-ring-offset-width: 0px;
         --tw-ring-offset-color: #fff;
         --tw-ring-color: oklch(54.6% .245 262.881);
@@ -372,67 +318,6 @@
     input::placeholder, textarea::placeholder {
         color: oklch(55.1% .027 264.364);
         opacity: 1;
-    }
-
-    ::-webkit-datetime-edit-fields-wrapper {
-        padding: 0;
-    }
-
-    ::-webkit-date-and-time-value {
-        min-height: 1.5em;
-    }
-
-    ::-webkit-date-and-time-value {
-        text-align: inherit;
-    }
-
-    ::-webkit-datetime-edit {
-        display: inline-flex;
-    }
-
-    ::-webkit-datetime-edit {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-year-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-month-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-day-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-hour-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-minute-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-second-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-millisecond-field {
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-
-    ::-webkit-datetime-edit-meridiem-field {
-        padding-top: 0;
-        padding-bottom: 0;
     }
 
     select {
@@ -482,7 +367,6 @@
 
     [type="checkbox"]:focus, [type="radio"]:focus {
         outline-offset: 2px;
-        --tw-ring-inset: var(--tw-empty,);
         --tw-ring-offset-width: 2px;
         --tw-ring-offset-color: #fff;
         --tw-ring-color: oklch(54.6% .245 262.881);
@@ -910,10 +794,6 @@
         margin-bottom: calc(var(--spacing) * 8);
     }
 
-    .mb-8\! {
-        margin-bottom: calc(var(--spacing) * 8) !important;
-    }
-
     .mb-10\! {
         margin-bottom: calc(var(--spacing) * 10) !important;
     }
@@ -931,10 +811,6 @@
 
     .block {
         display: block;
-    }
-
-    .contents {
-        display: contents;
     }
 
     .flex {
