--- a/src/css/theme/generic-theme.css
+++ b/src/css/theme/generic-theme.css
@@ -1,3 +1,445 @@
+@layer properties {
+    @supports (((-webkit-hyphens: none)) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color: rgb(from red r g b)))) {
+        *, :before, :after, ::backdrop {
+            --tw-translate-x: 0;
+            --tw-translate-y: 0;
+            --tw-translate-z: 0;
+            --tw-scale-x: 1;
+            --tw-scale-y: 1;
+            --tw-scale-z: 1;
+            --tw-rotate-x: initial;
+            --tw-rotate-y: initial;
+            --tw-rotate-z: initial;
+            --tw-skew-x: initial;
+            --tw-skew-y: initial;
+            --tw-space-y-reverse: 0;
+            --tw-space-x-reverse: 0;
+            --tw-border-style: solid;
+            --tw-leading: initial;
+            --tw-font-weight: initial;
+            --tw-shadow: 0 0 #0000;
+            --tw-shadow-color: initial;
+            --tw-shadow-alpha: 100%;
+            --tw-inset-shadow: 0 0 #0000;
+            --tw-inset-shadow-color: initial;
+            --tw-inset-shadow-alpha: 100%;
+            --tw-ring-color: initial;
+            --tw-ring-shadow: 0 0 #0000;
+            --tw-inset-ring-color: initial;
+            --tw-inset-ring-shadow: 0 0 #0000;
+            --tw-ring-inset: initial;
+            --tw-ring-offset-width: 0px;
+            --tw-ring-offset-color: #fff;
+            --tw-ring-offset-shadow: 0 0 #0000;
+            --tw-outline-style: solid;
+            --tw-blur: initial;
+            --tw-brightness: initial;
+            --tw-contrast: initial;
+            --tw-grayscale: initial;
+            --tw-hue-rotate: initial;
+            --tw-invert: initial;
+            --tw-opacity: initial;
+            --tw-saturate: initial;
+            --tw-sepia: initial;
+            --tw-drop-shadow: initial;
+            --tw-drop-shadow-color: initial;
+            --tw-drop-shadow-alpha: 100%;
+            --tw-drop-shadow-size: initial;
+            --tw-ease: initial;
+            --tw-duration: initial;
+            --tw-animation-delay: 0s;
+            --tw-animation-direction: normal;
+            --tw-animation-duration: initial;
+            --tw-animation-fill-mode: none;
+            --tw-animation-iteration-count: 1;
+            --tw-enter-blur: 0;
+            --tw-enter-opacity: 1;
+            --tw-enter-rotate: 0;
+            --tw-enter-scale: 1;
+            --tw-enter-translate-x: 0;
+            --tw-enter-translate-y: 0;
+            --tw-exit-blur: 0;
+            --tw-exit-opacity: 1;
+            --tw-exit-rotate: 0;
+            --tw-exit-scale: 1;
+            --tw-exit-translate-x: 0;
+            --tw-exit-translate-y: 0;
+        }
+    }
+}
+
+@layer base {
+    :root, :host {
+        --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        --color-red-500: oklch(63.7% .237 25.331);
+        --color-orange-500: oklch(70.5% .213 47.604);
+        --color-yellow-500: oklch(79.5% .184 86.047);
+        --color-teal-500: oklch(70.4% .14 182.503);
+        --color-gray-400: oklch(70.7% .022 261.325);
+        --color-gray-500: oklch(55.1% .027 264.364);
+        --color-gray-600: oklch(44.6% .03 256.802);
+        --color-black: #000;
+        --color-white: #fff;
+        --container-md: 28rem;
+        --font-weight-extralight: 200;
+        --font-weight-light: 300;
+        --font-weight-medium: 500;
+        --font-weight-semibold: 600;
+        --font-weight-bold: 700;
+        --font-weight-extrabold: 800;
+        --radius-sm: .25rem;
+        --radius-lg: .5rem;
+        --radius-xl: .75rem;
+        --ease-in-out: cubic-bezier(.4, 0, .2, 1);
+        --animate-spin: spin 1s linear infinite;
+        --blur-sm: 8px;
+        --default-transition-duration: .15s;
+        --default-transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+        --default-font-family: var(--font-sans);
+        --default-mono-font-family: var(--font-mono);
+    }
+}
+
+@layer base {
+    *, :after, :before, ::backdrop {
+        box-sizing: border-box;
+        border: 0 solid;
+        margin: 0;
+        padding: 0;
+    }
+
+    ::file-selector-button {
+        box-sizing: border-box;
+        border: 0 solid;
+        margin: 0;
+        padding: 0;
+    }
+
+    html, :host {
+        -webkit-text-size-adjust: 100%;
+        tab-size: 4;
+        line-height: 1.5;
+        font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"), ui-sans-serif;
+        -webkit-tap-highlight-color: transparent;
+    }
+
+    hr {
+        height: 0;
+        color: inherit;
+        border-top-width: 1px;
+    }
+
+    abbr:where([title]) {
+        -webkit-text-decoration: underline dotted;
+        text-decoration: underline dotted;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-size: inherit;
+        font-weight: inherit;
+    }
+
+    a {
+        color: inherit;
+        -webkit-text-decoration: inherit;
+        -webkit-text-decoration: inherit;
+        -webkit-text-decoration: inherit;
+        text-decoration: inherit;
+    }
+
+    b, strong {
+        font-weight: bolder;
+    }
+
+    code, kbd, samp, pre {
+        font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace), ui-monospace;
+        font-size: 1em;
+    }
+
+    small {
+        font-size: 80%;
+    }
+
+    sub, sup {
+        vertical-align: baseline;
+        font-size: 75%;
+        line-height: 0;
+        position: relative;
+    }
+
+    sub {
+        bottom: -.25em;
+    }
+
+    sup {
+        top: -.5em;
+    }
+
+    table {
+        text-indent: 0;
+        border-color: inherit;
+        border-collapse: collapse;
+    }
+
+    :-moz-focusring {
+        outline: auto;
+    }
+
+    progress {
+        vertical-align: baseline;
+    }
+
+    summary {
+        display: list-item;
+    }
+
+    ol, ul, menu {
+        list-style: none;
+    }
+
+    img, svg, video, canvas, audio, iframe, embed, object {
+        vertical-align: middle;
+        display: block;
+    }
+
+    img, video {
+        max-width: 100%;
+        height: auto;
+    }
+
+    button, input, select, optgroup, textarea {
+        font: inherit;
+        font-feature-settings: inherit;
+        font-variation-settings: inherit;
+        letter-spacing: inherit;
+        color: inherit;
+        opacity: 1;
+        background-color: #0000;
+        border-radius: 0;
+    }
+
+    ::file-selector-button {
+        font: inherit;
+        font-feature-settings: inherit;
+        font-variation-settings: inherit;
+        letter-spacing: inherit;
+        color: inherit;
+        opacity: 1;
+        background-color: #0000;
+        border-radius: 0;
+    }
+
+    :where(select:is([multiple], [size])) optgroup {
+        font-weight: bolder;
+    }
+
+    :where(select:is([multiple], [size])) optgroup option {
+        padding-inline-start: 20px;
+    }
+
+    ::file-selector-button {
+        margin-inline-end: 4px;
+    }
+
+    ::placeholder {
+        opacity: 1;
+    }
+
+    @supports (not ((-webkit-appearance: -apple-pay-button))) or (contain-intrinsic-size: 1px) {
+        ::placeholder {
+            color: currentColor;
+        }
+
+        @supports (color: color-mix(in lab, red, red)) {
+            ::placeholder {
+                color: color-mix(in oklab, currentcolor 50%, transparent);
+            }
+        }
+    }
+
+    textarea {
+        resize: vertical;
+    }
+
+    :-moz-ui-invalid {
+        box-shadow: none;
+    }
+
+    button, input:where([type="button"], [type="reset"], [type="submit"]) {
+        appearance: button;
+    }
+
+    ::file-selector-button {
+        appearance: button;
+    }
+
+    ::-webkit-inner-spin-button {
+        height: auto;
+    }
+
+    ::-webkit-outer-spin-button {
+        height: auto;
+    }
+
+    [hidden]:where(:not([hidden="until-found"])) {
+        display: none !important;
+    }
+
+    [type="text"], input:where(:not([type])), [type="email"], [type="url"], [type="password"], [type="number"], [type="date"], [type="datetime-local"], [type="month"], [type="search"], [type="tel"], [type="time"], [type="week"], [multiple], textarea, select {
+        appearance: none;
+        --tw-shadow: 0 0 #0000;
+        background-color: #fff;
+        border-width: 1px;
+        border-color: oklch(55.1% .027 264.364);
+        border-radius: 0;
+        padding: .5rem .75rem;
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
+    :is([type="text"], input:where(:not([type])), [type="email"], [type="url"], [type="password"], [type="number"], [type="date"], [type="datetime-local"], [type="month"], [type="search"], [type="tel"], [type="time"], [type="week"], [multiple], textarea, select):focus {
+        outline-offset: 2px;
+        --tw-ring-offset-width: 0px;
+        --tw-ring-offset-color: #fff;
+        --tw-ring-color: oklch(54.6% .245 262.881);
+        --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+        --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+        box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+        border-color: oklch(54.6% .245 262.881);
+        outline: 2px solid #0000;
+    }
+
+    input::placeholder, textarea::placeholder {
+        color: oklch(55.1% .027 264.364);
+        opacity: 1;
+    }
+
+    select {
+        print-color-adjust: exact;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='oklch(55.1%25 0.027 264.364)' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+        background-position: right .5rem center;
+        background-repeat: no-repeat;
+        background-size: 1.5em 1.5em;
+        padding-right: 2.5rem;
+    }
+
+    [multiple], [size]:where(select:not([size="1"])) {
+        background-image: initial;
+        background-position: initial;
+        background-repeat: unset;
+        background-size: initial;
+        print-color-adjust: unset;
+        padding-right: .75rem;
+    }
+
+    [type="checkbox"], [type="radio"] {
+        appearance: none;
+        print-color-adjust: exact;
+        vertical-align: middle;
+        -webkit-user-select: none;
+        user-select: none;
+        color: oklch(54.6% .245 262.881);
+        --tw-shadow: 0 0 #0000;
+        background-color: #fff;
+        background-origin: border-box;
+        border-width: 1px;
+        border-color: oklch(55.1% .027 264.364);
+        flex-shrink: 0;
+        width: 1rem;
+        height: 1rem;
+        padding: 0;
+        display: inline-block;
+    }
+
+    [type="checkbox"] {
+        border-radius: 0;
+    }
+
+    [type="radio"] {
+        border-radius: 100%;
+    }
+
+    [type="checkbox"]:focus, [type="radio"]:focus {
+        outline-offset: 2px;
+        --tw-ring-offset-width: 2px;
+        --tw-ring-offset-color: #fff;
+        --tw-ring-color: oklch(54.6% .245 262.881);
+        --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+        --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+        box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+        outline: 2px solid #0000;
+    }
+
+    [type="checkbox"]:checked, [type="radio"]:checked {
+        background-color: currentColor;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        border-color: #0000;
+    }
+
+    [type="checkbox"]:checked {
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+    }
+
+    @media (forced-colors: active) {
+        [type="checkbox"]:checked {
+            appearance: auto;
+        }
+    }
+
+    [type="radio"]:checked {
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
+    }
+
+    @media (forced-colors: active) {
+        [type="radio"]:checked {
+            appearance: auto;
+        }
+    }
+
+    [type="checkbox"]:checked:hover, [type="checkbox"]:checked:focus, [type="radio"]:checked:hover, [type="radio"]:checked:focus {
+        background-color: currentColor;
+        border-color: #0000;
+    }
+
+    [type="checkbox"]:indeterminate {
+        background-color: currentColor;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 16'%3e%3cpath stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M4 8h8'/%3e%3c/svg%3e");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        border-color: #0000;
+    }
+
+    @media (forced-colors: active) {
+        [type="checkbox"]:indeterminate {
+            appearance: auto;
+        }
+    }
+
+    [type="checkbox"]:indeterminate:hover, [type="checkbox"]:indeterminate:focus {
+        background-color: currentColor;
+        border-color: #0000;
+    }
+
+    [type="file"] {
+        background: unset;
+        border-color: inherit;
+        font-size: unset;
+        line-height: inherit;
+        border-width: 0;
+        border-radius: 0;
+        padding: 0;
+    }
+
+    [type="file"]:focus {
+        outline: 1px solid buttontext;
+        outline: 1px auto -webkit-focus-ring-color;
+    }
+}
+
 :root {
     /* Animations --- */
     --animate-progress-linear-indeterminate-horizontal: progress-linear-indeterminate-horizontal 1.5s ease-in-out infinite;
@@ -480,7 +922,7 @@
 }
 
 .base-font-family {
-    font-family: var(--base-font-family);
+    font-family: var(--base-font-family), ui-sans-serif;
 }
 
 .base-font-size {
