--- a/src/css/partials/stats.css
+++ b/src/css/partials/stats.css
@@ -3,6 +3,49 @@
 .stats {
   display: inline-grid;
 
+  grid-auto-flow: row;
+
+  :where(& > :not(:last-child)) {
+    --tw-divide-x-reverse: 0;
+    border-inline-style: var(--tw-border-style);
+    border-inline-start-width: calc(0px * var(--tw-divide-x-reverse));
+    border-inline-end-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
+  }
+
+  :where(& > :not(:last-child)) {
+    --tw-divide-y-reverse: 0;
+    border-bottom-style: var(--tw-border-style);
+    border-top-style: var(--tw-border-style);
+    border-top-width: calc(1px * var(--tw-divide-y-reverse));
+    border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  }
+
+  overflow-y: auto;
+
+  @media (min-width: 40rem) {
+    grid-auto-flow: column;
+    :where(& > :not(:last-child)) {
+      --tw-divide-x-reverse: 0;
+      border-inline-style: var(--tw-border-style);
+      border-inline-start-width: calc(1px * var(--tw-divide-x-reverse));
+      border-inline-end-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+
+      :where(& > :not(:last-child)) {
+        --tw-divide-y-reverse: 0;
+        border-bottom-style: var(--tw-border-style);
+        border-top-style: var(--tw-border-style);
+        border-top-width: calc(0px * var(--tw-divide-y-reverse));
+        border-bottom-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
+      }
+
+      overflow-x: auto;
+
+      &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+        --tw-divide-x-reverse: 1;
+      }
+    }
+  }
+
   :where(&) {
     grid-auto-flow: column;
   }
@@ -73,58 +116,18 @@
   }
 
   .stat-value {
-    font-size: calc(2.25rem /* 36px */ * var(--text-scaling)) /* 2.25rem = 36px */;
-    line-height: var(--tw-leading, calc(calc(2.5 / 2.25) var(--text-scaling)));
-    --tw-font-weight: var(--font-weight-extrabold);
+    font-size: calc(2.25rem/* 36px */ * var(--text-scaling)) /* 2.25rem = 36px */;
+    line-height: var(--tw-leading, calc(calc(2.5 / 2.25) * 1));
     font-weight: var(--font-weight-extrabold);
   }
 
   .stat-desc {
     color: light-dark(var(--color-surface-700), var(--color-surface-300));
     font-size: calc(0.75rem * var(--text-scaling));
-    line-height: var(--tw-leading, calc(calc(1 / 0.75) * var(--text-scaling)));
+    line-height: var(--tw-leading, calc(calc(1 / 0.75) * 1));
   }
 
   .stat-actions {
     margin-top: calc(var(--spacing) * 4);
   }
-}
-
-.stats-horizontal {
-  grid-auto-flow: column;
-  :where(& > :not(:last-child)) {
-    --tw-divide-x-reverse: 0;
-    border-inline-style: var(--tw-border-style);
-    border-inline-start-width: calc(1px * var(--tw-divide-x-reverse));
-    border-inline-end-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-    :where(& > :not(:last-child)) {
-      --tw-divide-y-reverse: 0;
-      border-bottom-style: var(--tw-border-style);
-      border-top-style: var(--tw-border-style);
-      border-top-width: calc(0px * var(--tw-divide-y-reverse));
-      border-bottom-width: calc(0px * calc(1 - var(--tw-divide-y-reverse)));
-    }
-    overflow-x: auto;
-    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
-      --tw-divide-x-reverse: 1;
-    }
-  }
-}
-
-.stats-vertical {
-  grid-auto-flow: row;
-  :where(& > :not(:last-child)) {
-    --tw-divide-x-reverse: 0;
-    border-inline-style: var(--tw-border-style);
-    border-inline-start-width: calc(0px * var(--tw-divide-x-reverse));
-    border-inline-end-width: calc(0px * calc(1 - var(--tw-divide-x-reverse)));
-  }
-  :where(& > :not(:last-child)) {
-    --tw-divide-y-reverse: 0;
-    border-bottom-style: var(--tw-border-style);
-    border-top-style: var(--tw-border-style);
-    border-top-width: calc(1px * var(--tw-divide-y-reverse));
-    border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  }
-  overflow-y: auto;
 }
